fix team card mobile vertical alignment

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -226,9 +226,15 @@
   color: var(--sl-color-white);
   text-align: center;
   flex: 1;
+  justify-content: space-between;
+}
+
+.team-member figcaption > div {
+  display: block;
 }
 
 .team-member-name {
+  display: block;
   color: var(--sl-color-white);
   font-size: 1rem;
   font-weight: 700;
@@ -237,6 +243,7 @@
 }
 
 .team-location {
+  display: block;
   font-family: var(--sl-font-mono);
   font-size: 0.85rem;
   color: var(--sl-color-accent);
